error en el js - el menu no se desplega

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
    <header>
       <nav>
          <a id="icono" class="icono" href="/">Menú</a>
-         <!--<div class="enlaces uno" id="enlace">
+         <div class="enlaces uno" id="enlace">
             <a href="/">Inicio</a>
             <a href="/">Aceerca de</a>
             <a href="/">Contacto</a>
-         </div-->
+         </div>
       </nav>
       <div class="container">
          <div class="textos">
@@ -35,6 +35,7 @@
                style="stroke: none; fill: rgb(255, 255, 255);"></path>
          </svg></div>
    </div>
+   <script src="./script.js"></script>
 </body>
 
 </html>
